# Dagboekmaker

./: .gitignore  README.md  pyproject.toml  requirements.txt
actors/: actors.json
admin/: actoren.html  formaten.html  index.html  server.py
corpus/1995/: doc_a1b2c3d4e5f6.json
dagboekmaker/: __init__.py  cli.py  corpus.py  datering.py  extractor.py  pipeline.py  splitter.py  verrijking.py
dashboard/: dashboard_data.json  index.html
tests/: test_datering.py  test_splitter.py
